...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="OMCharityListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="OMCharityListViewController" customModule="Omise" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="gHX-h1-ch9">
                                                    <rect key="frame" x="140" y="47.5" width="232.5" height="25.5"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="CharityTableCellLabel"/>
                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                                    <nil key="textColor"/>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="CharityTableCell">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Charites" id="igC-gR-1ib"/>
                    <connections>
                        <outlet property="charityListTableView" destination="kW8-lG-a7j" id="hk7-fQ-35S"/>
...
                                <rect key="frame" x="35" y="332" width="344" height="55"/>
                                <color key="backgroundColor" red="0.40350425239999999" green="0.75053113699999996" blue="0.72172248360000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="DonateButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="n2g-wc-qD8"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJA-VL-HUK">
                                        <rect key="frame" x="132" y="0.0" width="212" height="21.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="CharityNameLabel"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                        <nil key="textColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0,00" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Gk-gr-diR" customClass="BindingTextField" customModule="Omise" customModuleProvider="target">
                                        <rect key="frame" x="44.5" y="0.0" width="299.5" height="60"/>
                                        <accessibility key="accessibilityConfiguration" identifier="DonationTextField"/>
                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                <rect key="frame" x="30" y="754" width="354" height="55"/>
                                <color key="backgroundColor" red="0.40213584899902344" green="0.73042494058609009" blue="0.74254363775253296" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="DismissButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="yUU-bd-NKz"/>
...
